# SAP-ABAP-UI5-Review-Assistant

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/db/: connection.py  models.py  repository.py
app/engines/: action_engine.py  artifact_classifier.py  assessment_engine.py  clean_core_checker.py  cross_artifact_checker.py  design_reviewer.py  diff_parser.py  findings_engine.py  multi_artifact_handler.py  pipeline.py  quality_gate.py  question_engine.py  refactoring_engine.py  review_type_detector.py  risk_engine.py  similarity.py  test_gap_analyzer.py
app/models/: enums.py  (+2 more)
static/: app.js  index.html  style.css
tests/: conftest.py  test_abap_error_handling_rules.py  test_abap_readability_rules.py  test_action_engine.py  test_artifact_classifier.py  test_assessment_engine.py  test_cds_annotation_rules.py  test_clean_core_checker.py  test_clean_core_deep.py  test_cross_artifact_checker.py  test_design_reviewer.py  test_diff_parser.py  test_domain_packs.py  test_e2e.py  test_example_cases.py  test_feedback.py  test_findings_engine.py  test_fiori_elements_rules.py  test_health.py  test_history.py  test_multi_artifact.py  test_output_formats.py  test_pipeline.py  test_quality_gate.py  test_question_engine.py  test_rap_consistency_rules.py  test_refactoring_engine.py  test_review_type_detector.py  test_risk_engine.py  test_sarif_export.py  test_schemas.py  test_service_odata_rules.py  test_similarity.py  test_team_workflows.py  test_test_gap_analyzer.py  test_ui5_freestyle_rules.py
(+29 files in other folders)
